fix spacing

--- a/client/src/components/Home/home.css
+++ b/client/src/components/Home/home.css
@@ -83,6 +83,7 @@ padding-left:2%;
   padding: 20px 0 0 0;
   z-index: 2;
   color: white;
+  margin: 0 0 30px 0;
 }
 
 .background-image2 {
@@ -96,6 +97,7 @@ padding-left:2%;
   border-style: solid;
   border-width: 9px;
   border-color: black;
+
   box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
 }
 
